--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "cra0",
+  "name": "jacobmuscleup.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "bootstrap": "^4.1.3",
+    "gh-pages": "^1.2.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.5",
+    "react-typist": "^2.0.4",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,10 +24,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
 	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
-  "homepage": "http://jacobmuscleup.github.io/test",
-  "devDependencies": {
-    "gh-pages": "^1.2.0"
-  }
+  "homepage" : "http://jacobmuscleup.github.io/website"
 }
